# seq-learning

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  hello.cpp  requirements.txt  tests.Dockerfile  tests.py
.github/workflows/: dockerimage.yml  tests.yml
examples/: GPy.py  PYMC3.py  data.py  eigenspace.py  gpflow.py  gpy.py  kinv.py  sk.py  sklearn.py  tests.py
paper/: Programing report .docx  Programing report .odt
src/: ASGP.cpp  ASGP.h  bindings.cpp  kernel.hpp  python_to_armadillo.hpp
src/activegp/: GaussianProcess.hpp
src/activegp/helpers/: constexprSqrt.hpp  thread_n_m.hpp
src/activegp/types/: DesignLoader.hpp  eCovTypes.h
src/cpp/: cov_types.hpp  gaussian_process.hpp  kernel.hpp  python_loader.cpp  python_loader.h  python_loader.hpp
src/cpp/helpers/: constexprSqrt.hpp
src/cpp/traits/: loader.hpp
src/cpp/types/: DesignLoader.h  eCovTypes.h
